# MLOPs-Binary-Classificator

./: .gitattributes  .gitignore  DockerFile  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  visualizer.py
.github/workflows/: cd.yml  ci.yml  frontend_cd.yml
api/: api_main.py
custom_lib/: __init__.py  data.py  model.py  train.py
data/: data.ipynb
data/umbalanced/: riceClassification_imbalanced.csv
graf/: Dockerfile.grafana  dashboard.json  dashboard.yml  datasource.yml
ml_modules/model/: tabnet_binary.onnx
mlflow/: serialization.py  training.py
mlflow/model/: .gitkeep  feature_metadata.json  tabnet_binary.onnx  xgboost_binary.onnx  xgboost_binary.onnx.data
prom/: Dockerfile.prometheus  prometheus.yml
public/: index.html  sketch.js  style.css
rice-simulator/: README.md  package-lock.json  package.json  server.js
rice-simulator/public/: index.html  style.css
templates/: home.html
tests/: api_test.py  data_test.py  model_test.py
